# pozar-drevo

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run_local.sh  setup_network.bat  start.bat  stop.bat
.streamlit/: config.toml
data/: timber_classes.yaml
src/: __init__.py  fire_check.py  loads.py  materials.py  pdf_report.py  sections.py  timber_check.py
